k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app
  namespace: statis-app
spec:
  selector:
    app: my-python-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
